small corrections, fix wrong cache name. Add explanation for transcoding JBossMarshalled objects and handle JigSaw with Java17